@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-13T02:24:48Z",
+  "timestamp" : "2022-10-13T08:32:49Z",
   "count_outdated" : 549,
   "uniques_outdated" : 133,
-  "count" : 596,
-  "uniques" : 143,
+  "count" : 602,
+  "uniques" : 144,
   "views" : [
     {
       "timestamp": "2022-09-30T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 8,
       "count_minmax": [ 6, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-13T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
