@@ -1,5 +1,5 @@
 {
-  "count": 47,
+  "count": 53,
   "uniques": 9,
   "views": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 8,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-13T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
