@@ -1,3 +1,11 @@
+2022-10-13T08:32:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240849195 # 518
+* notice: last 14d: unq all: 9 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 133 549 / 143 596
+* notice: next accum: outdated-unq outdated-all / unq all: 133 549 / 144 602
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: removed / changed dates: [] / [2022-10-13]
+
 2022-10-13T02:24:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239244365 # 517
 * notice: last 14d: unq all: 9 47
